--- a/css/style.css
+++ b/css/style.css
@@ -549,8 +549,11 @@ footer li:not(.contact-methods li) {
 main.user-form .container {
     max-width: 900px;
     margin: 0 auto;
-    text-align: center;
     font-size: 20px;
+}
+
+main.user-form .container:not(label) {
+    text-align: center;
 }
 
 main.user-form .sec {
@@ -573,10 +576,11 @@ main.user-form .sec #form input {
     width: 100%;
     height: 2.2em;
     display: block;
-    margin: 0.5em 0 1em;
+    margin: 0.5em 0.1em 1em;
     padding: 1em;
     outline-color: var(--main-color);
     font-size: 0.8em;
+    border-radius: 4px;
 }
 
 main.user-form .sec #form button {
@@ -586,7 +590,7 @@ main.user-form .sec #form button {
     border-radius: 4px;
     font-weight: bold;
     text-transform: uppercase;
-    margin: 1em 0;
+    margin: 1em auto;
 }
 
 main.user-form .sec2 {
@@ -594,4 +598,27 @@ main.user-form .sec2 {
     width: 300px;
     height: 350px;
     border: 3px solid #fff;
+}
+
+main.user-form #form label {
+    float: left;
+    margin-bottom: 0.2em;
+    text-transform: capitalize;
+    font-weight: 500;
+}
+
+.errLog {
+    color: #f13e3e;
+    font-size: 0.8em;
+    text-align: left;
+    float: left;
+}
+
+.errLog li {
+    list-style-type: disc;
+}
+
+.errLog li.correct {
+    color: #21bb21;
+    list-style-type: circle;
 }
