worked om the form verification js and solved some error in the style sheet

--- a/css/style.css
+++ b/css/style.css
@@ -1,624 +1,648 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    scroll-behavior: smooth;
-    list-style-type: none;
-    border: none;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	scroll-behavior: smooth;
+	list-style-type: none;
+	border: none;
 }
 
 html {
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 body {
-    max-width: 100%;
-    min-width: 360px;
-    background-color: #ddd;
+	width: 100%;
+	min-width: 350px;
+	background-color: #ccc;
 }
 
 :root {
-    --main-color: #030c30;
-    --plain-white: #fff;
-    --hover-effect: 70%;
+	--main-color: #030c30;
+	--plain-white: #fff;
+	--hover-effect: 70%;
 }
 
 /* static styles */
 .dark-bg030c30 {
-    background: var(--main-color);
-    color: var(--plain-white);
+	background: var(--main-color);
+	color: var(--plain-white);
 }
 
 .dark-bg030c30 a {
-    color: #fff;
+	color: #fff;
 }
 
 .light-bgfff {
-    color: var(--main-color);
-    background: var(--plain-white);
+	color: var(--main-color);
+	background: var(--plain-white);
 }
 
 .light-bgfff a {
-    color: #030c30;
+	color: #030c30;
 }
 
 .light-bgfff .menu-toggle {
-    color: #030c30;
+	color: #030c30;
 }
 
 button:hover,
 a:hover {
-    opacity: var(--hover-effect);
-    cursor: pointer;
+	opacity: var(--hover-effect);
+	cursor: pointer;
 }
 
 .flex-bet-cen {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1em;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 1em;
 }
 
 .grid-col-2-auto {
-    display: grid;
-    grid-template-columns: 1.8fr 1fr;
-    place-items: center;
+	display: grid;
+	grid-template-columns: 1.8fr 1fr;
+	place-items: center;
 }
 
 .container {
-    gap: 2em;
-    padding: 2em;
-    place-self: center;
+	gap: 2em;
+	padding: 2em;
+	place-self: center;
 }
 /* end static styles */
 
 /* --header */
 header {
-    padding: 1em 2em;
-    width: 100%;
-    font-size: 20px;
+	padding: 0.5em 1.5em;
+	width: 100%;
+	font-size: calc(10px + 1vmax);
 }
 
 .logo {
-    font-size: 2em;
-    font-weight: 700;
-    line-height: 1em;
-    text-transform: capitalize;
+	font-size: 1.8em;
+	font-weight: 700;
+	line-height: 1em;
+	text-transform: capitalize;
 }
 
 .fixedHeader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1000;
 }
 
 .fixedMain {
-    margin-top: 80px;
+	margin-top: 80px;
+	width: 100%;
 }
 
 header .nav-links ul li {
-    display: inline-block;
+	display: inline-block;
 }
 
 .nav-links li:not(:last-child) {
-    margin-right: 1em;
+	margin-right: 1em;
 }
 
 .menu-toggle,
 .close-toggle {
-    font-size: 1.5em;
-    background-color: transparent;
-    color: white;
-    position: absolute;
-    left: 1em;
+	font-size: 1.5em;
+	background-color: transparent;
+	color: white;
+	position: absolute;
+	left: 1em;
 }
 
 .close-toggle {
-    color: #d60909;
+	color: #d60909;
 }
 
 /* banner*/
 main {
-    font-size: 20px;
+	font-size: calc(10px + 1vmax);
+	width: 100%;
+	overflow: hidden;
 }
 
 .banner-section {
-    min-height: calc(100vh - 300px);
-    display: grid;
-    justify-items: center;
+	min-height: calc(100vh - 300px);
+	display: grid;
+	justify-items: center;
 }
 
 .banner-section article h1 {
-    font-size: 2em;
-    text-transform: uppercase;
-    margin-bottom: 0.25em;
+	font-size: 2em;
+	text-transform: uppercase;
+	margin-bottom: 0.25em;
 }
 
 .banner-section article .btn-container {
-    margin-top: 1em;
+	margin-top: 1em;
 }
 
 .banner-section article button {
-    font-size: 1em;
-    text-transform: capitalize;
-    padding: 0.1em 0.3em;
-    border-radius: 4px;
-    font-weight: 500;
+	font-size: 1em;
+	text-transform: capitalize;
+	padding: 0.1em 0.3em;
+	border-radius: 4px;
+	font-weight: 500;
 }
 
 .scc {
-    color: #2424f5;
+	color: #2424f5;
 }
 
 .banner-section article:nth-child(2) {
-    display: grid;
-    grid-template-columns: repeat(3, 125px);
-    grid-template-rows: repeat(3, 125px);
-    max-width: fit-content;
-    height: fit-content;
+	display: grid;
+	grid-template-columns: repeat(3, 125px);
+	grid-template-rows: repeat(3, 125px);
+	max-width: fit-content;
+	height: fit-content;
 }
 
 .banner-section article:nth-child(2) span.abst:nth-child(2n + 1) {
-    background: #2424f5;
-    position: relative;
+	background: #2424f5;
+	position: relative;
 }
 
 .banner-section article:nth-child(2) span.abst:nth-child(2n) {
-    position: relative;
+	position: relative;
 }
 
 .banner-section article:nth-child(2) span.abst:nth-child(2n + 1)::after {
-    content: "dash";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: grid;
-    place-items: center;
-    text-transform: uppercase;
-    font-weight: 900;
+	content: "dash";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: grid;
+	place-items: center;
+	text-transform: uppercase;
+	font-weight: 900;
 }
 
 .banner-section article:nth-child(2) span.abst:nth-child(2n)::after {
-    content: "sync";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: grid;
-    place-items: center;
-    text-transform: uppercase;
-    font-weight: 900;
+	content: "sync";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: grid;
+	place-items: center;
+	text-transform: uppercase;
+	font-weight: 900;
 }
 /*--end of banner*/
 
 /* main design */
 .companies-section {
-    font-size: 1.2em;
-    text-transform: uppercase;
-    font-weight: 700;
-    padding: 1em;
-    margin: 1em 0 2em;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	font-weight: 700;
+	padding: 1em;
+	margin: 1em 0 2em;
 }
 
 .companies-section.container {
-    max-width: 840px;
+	max-width: 840px;
 }
 
 section:not(.banner-section) {
-    margin: 20px 0;
+	margin: 20px 0;
 }
 
 section .container:not(.banner-section .container) {
-    font-size: 0.8em;
+	font-size: 0.8em;
 }
 
 section .title {
-    text-align: center;
-    max-width: 400px;
-    margin: 0 auto;
-    margin-bottom: 1em;
+	text-align: center;
+	max-width: 400px;
+	margin: 0 auto;
+	margin-bottom: 1em;
 }
 
 /* cards */
 section img,
 aside img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+	width: 100%;
+	height: auto;
+	object-fit: cover;
 }
 
 .serBox {
-    background-color: white;
-    padding: 1em 0.5em;
-    border-radius: 4px;
-    box-shadow: 0 0 2px #ccc;
+	background-color: white;
+	padding: 1em 0.5em;
+	border-radius: 4px;
+	box-shadow: 0 0 2px #ccc;
 }
 
 .serBox i {
-    margin-bottom: 0.8em;
+	margin-bottom: 0.8em;
 }
 
 .serBox h3 {
-    margin-bottom: 0.4em;
+	margin-bottom: 0.4em;
 }
 
 .about-modal {
-    text-align: center;
+	text-align: center;
 }
 
 section article h3 {
-    text-transform: capitalize;
+	text-transform: capitalize;
 }
 
 .ico-a,
 .ico {
-    width: 80px;
-    height: 80px;
-    border-radius: 100px;
-    border: 2px solid #030c30;
-    margin: 0 auto;
-    color: #030c30;
-    display: grid;
-    place-items: center;
-    overflow: hidden;
+	width: 80px;
+	height: 80px;
+	border-radius: 100px;
+	border: 2px solid #030c30;
+	margin: 0 auto;
+	color: #030c30;
+	display: grid;
+	place-items: center;
+	overflow: hidden;
 }
 
 .about-modal .ico-a {
-    border-left-style: double;
-    border-left-width: 10px;
+	border-left-style: double;
+	border-left-width: 10px;
 }
 
 .ico-a img,
 .ico img {
-    width: calc(100% - 1em);
+	width: calc(100% - 1em);
 }
 
 .u-title {
-    max-width: 600px;
-    padding: 1em;
-    margin: 0 auto;
-    text-align: left;
+	max-width: 600px;
+	padding: 1em;
+	margin: 0 auto;
+	text-align: left;
 }
 
 .u-modal {
-    max-width: 250px;
+	max-width: 250px;
 }
 
 .u-modal .profileBox,
 .testModal .img-box {
-    width: 60px;
-    height: 60px;
-    border-radius: 100px;
-    border: 2px solid #fff;
-    margin: 0 auto;
-    overflow: hidden;
+	width: 60px;
+	height: 60px;
+	border-radius: 100px;
+	border: 2px solid #fff;
+	margin: 0 auto;
+	overflow: hidden;
 }
 
 .testimonies-section .container {
-    overflow-x: auto;
+	overflow-x: auto;
 }
 
 .testModal {
-    background-color: #fff;
-    padding: 2em;
-    border-radius: 0 60px 10px;
-    min-width: 280px;
+	background-color: #fff;
+	padding: 2em;
+	border-radius: 0 60px 10px;
+	min-width: 280px;
 }
 
 .testModal .header {
-    display: flex;
-    justify-content: flex-start;
+	display: flex;
+	justify-content: flex-start;
 }
 
 .testModal .img-box {
-    border: 2px solid #030c30;
+	border: 2px solid #030c30;
 }
 /* cards end */
 
 aside {
-    text-align: center;
+	text-align: center;
 }
 
 footer .container {
-    max-width: 1000px;
-    margin: auto;
-    padding: 0 1em 0;
+	max-width: 1000px;
+	margin: auto;
+	padding: 0 1em 0;
 }
 
 footer .container div {
-    padding-bottom: 1em;
+	padding-bottom: 1em;
 }
 
 footer div h4 {
-    font-size: 1.2em;
-    text-transform: uppercase;
-    margin-bottom: 0.3em;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	margin-bottom: 0.3em;
 }
 
 footer .ccr {
-    text-transform: uppercase;
-    text-align: center;
+	text-transform: uppercase;
+	text-align: center;
 }
 
 footer a:hover {
-    opacity: 70%;
+	opacity: 70%;
 }
 
 /* end main design */
 
 /* media screen */
 @media (max-width: 640px) {
-    header {
-        padding: 1em;
-        flex-direction: row-reverse;
-    }
+	header {
+		padding: 1em;
+		flex-direction: row-reverse;
+	}
 
-    header .nav-links ul li {
-        display: block;
-    }
+	header .nav-links ul li {
+		display: block;
+	}
 
-    .nav-links {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: #fff;
-        padding: 1em;
-        height: calc(100vh);
-        overflow: auto;
-        translate: -100% 0;
-        transition: 1s;
-    }
+	.nav-links {
+		position: fixed;
+		top: 0;
+		left: 0;
+		background-color: #fff;
+		padding: 1em;
+		height: calc(100vh);
+		overflow: auto;
+		translate: -100% 0;
+		transition: 1s;
+		z-index: 900;
+		border-right: 0.5px solid #030c30;
+	}
 
-    .show-nav-links {
-        translate: 0 0;
-    }
+	.show-nav-links {
+		translate: 0 0;
+	}
 
-    .nav-links a {
-        color: #030c30;
-        font-weight: 600;
-    }
+	.nav-links a {
+		color: #030c30;
+		font-weight: 600;
+	}
 
-    .nav-links ul {
-        line-height: 3em;
-        margin-top: 2em;
-    }
+	.nav-links ul {
+		line-height: 3em;
+		margin-top: 2em;
+	}
 
-    .nav-links li:not(:last-child) {
-        margin-right: 0em;
-    }
+	.nav-links li:not(:last-child) {
+		margin-right: 0em;
+	}
 
-    .container {
-        margin-top: 0px;
-        padding-top: 0.5em;
-    }
+	.container {
+		margin-top: 0px;
+		padding-top: 0.5em;
+	}
 
-    .fixedMain {
-        margin-top: 100px;
-    }
+	.fixedMain {
+		margin-top: 100px;
+	}
 
-    .flex-bet-cen:not(header.flex-bet-cen) {
-        flex-direction: column;
-    }
+	.flex-bet-cen:not(header.flex-bet-cen) {
+		flex-direction: column;
+	}
 
-    footer .flex-bet-cen {
-        display: block;
-        text-align: center;
-    }
+	footer .flex-bet-cen {
+		display: block;
+		text-align: center;
+	}
 
-    footer .container div {
-        text-align: left;
-    }
+	footer .container div {
+		text-align: left;
+	}
 
-    footer .container div:nth-child(2n + 1):not(div.ccr) {
-        text-align: right;
-    }
+	footer .container div:nth-child(2n + 1):not(div.ccr) {
+		text-align: right;
+	}
 }
 
 @media (max-width: 720px) {
-    .grid-col-2-auto {
-        grid-template-columns: 1fr;
-    }
+	.grid-col-2-auto {
+		grid-template-columns: 1fr;
+	}
 }
 
 @media (max-width: 840px) {
-    .banner-section article:nth-child(2) {
-        grid-template-columns: repeat(3, 100px);
-        grid-template-rows: repeat(3, 100px);
-    }
+	.banner-section article:nth-child(2) {
+		grid-template-columns: repeat(3, 100px);
+		grid-template-rows: repeat(3, 100px);
+	}
 
-    .testModal {
-        max-width: 280px;
-    }
+	.testModal {
+		max-width: 280px;
+	}
 }
 
 @media (max-width: 1020px) {
-    .users-section.flex-bet-cen {
-        flex-direction: column;
-    }
+	.users-section.flex-bet-cen {
+		flex-direction: column;
+	}
 
-    .users-section.flex-bet-cen .u-title {
-        text-align: center;
-    }
+	.users-section.flex-bet-cen .u-title {
+		text-align: center;
+	}
 }
 
 .top-svg {
-    position: relative;
-    top: -20px;
-    z-index: -10;
+	position: relative;
+	top: -20px;
+	z-index: -10;
 }
 
 .svgBox {
-    position: relative;
-    bottom: -1em;
-    z-index: -10;
+	position: relative;
+	bottom: -1em;
+	z-index: -10;
 }
 
 @media (min-width: 840px) {
-    .about-modal:nth-of-type(2n) {
-        translate: 0 50px;
-    }
+	.about-modal:nth-of-type(2n) {
+		translate: 0 50px;
+	}
 }
 
 @media (min-width: 641px) {
-    .menu-toggle,
-    .close-toggle {
-        display: none;
-    }
+	.menu-toggle,
+	.close-toggle {
+		display: none;
+	}
 }
 
 /* end of media screen */
 
 /*forgotten*/
 .moreUsers {
-    background: transparent;
-    color: #fff;
-    font-size: 2em;
+	background: transparent;
+	color: #fff;
+	font-size: 2em;
 }
 
 .bottom .moreUsers {
-    position: fixed;
-    bottom: 2em;
-    background-color: #030c30;
-    right: 1em;
-    width: 2em;
-    height: 2em;
-    border-radius: 1em;
-    opacity: 90%;
-    display: none;
+	position: fixed;
+	bottom: 2em;
+	background-color: #030c30;
+	right: 1em;
+	width: 2em;
+	height: 2em;
+	border-radius: 1em;
+	opacity: 90%;
+	display: none;
 }
 
 footer nav.flex-bet-cen {
-    align-items: flex-start;
-    gap: 2em;
+	align-items: flex-start;
+	gap: 2em;
 }
 
 footer .links {
-    font-size: 1.5em;
-    margin-top: 0.5em;
+	font-size: 1.5em;
+	margin-top: 0.5em;
 }
 
 footer .links li {
-    margin: 0.3em;
-    border: 2px solid #fff;
-    border-radius: 100px;
-    width: 1.6em;
-    height: 1.6em;
-    display: inline-block;
-    padding: 0.2em;
+	margin: 0.3em;
+	border: 2px solid #fff;
+	border-radius: 100px;
+	width: 1.6em;
+	height: 1.6em;
+	display: inline-block;
+	padding: 0.2em;
 }
 
 footer .links li a {
-    display: grid;
-    place-items: center;
+	display: grid;
+	place-items: center;
 }
 
 footer li:not(.contact-methods li) {
-    text-transform: capitalize;
-    margin: 0.2em 0;
+	text-transform: capitalize;
+	margin: 0.2em 0;
 }
 
 .errorMain {
-    max-height: 100vh;
-    width: 100%;
-    font-size: 2em;
-    overflow: hidden;
+	max-height: 100vh;
+	width: 100%;
+	font-size: 2em;
+	overflow: hidden;
 }
 
 .errorNotFound {
-    /* height: calc(100vh - 400px); */
-    display: grid;
-    place-items: center;
-    place-content: center;
+	/* height: calc(100vh - 400px); */
+	display: grid;
+	place-items: center;
+	place-content: center;
 }
 
 .errorMain .container {
-    margin: 0;
-    padding: 0;
-    translate: 0 -10%;
-    position: relative;
-    left: 0;
-    top: -10%;
+	margin: 0;
+	padding: 0;
+	translate: 0 -10%;
+	position: relative;
+	left: 0;
+	top: -10%;
 }
 
 main.user-form .container {
-    max-width: 900px;
-    margin: 0 auto;
-    font-size: 20px;
+	max-width: 900px;
+	margin: 0 auto;
+	font-size: 20px;
 }
 
 main.user-form .container:not(label) {
-    text-align: center;
+	text-align: center;
 }
 
 main.user-form .sec {
-    width: 300px;
-    min-width: 300px;
-    padding: 1em;
+	width: 300px;
+	min-width: 300px;
+	padding: 1em;
 }
 
 main.user-form .sec h1 {
-    margin-bottom: 0.5em;
+	margin-bottom: 0.5em;
 }
 
 main.user-form .sec #form .errMsg {
-    color: red;
-    text-transform: capitalize;
-    margin: 0.5em 0;
+	color: red;
+	text-transform: capitalize;
+	margin: 0.5em 0;
 }
 
 main.user-form .sec #form input {
-    width: 100%;
-    height: 2.2em;
-    display: block;
-    margin: 0.5em 0.1em 1em;
-    padding: 1em;
-    outline-color: var(--main-color);
-    font-size: 0.8em;
-    border-radius: 4px;
+	width: 100%;
+	height: 2.2em;
+	display: block;
+	margin: 0.5em 0.1em 1em;
+	padding: 1em;
+	outline-color: var(--main-color);
+	font-size: 0.8em;
+	border-radius: 4px;
 }
 
 main.user-form .sec #form button {
-    padding: 0.6em 2em;
-    background-color: var(--main-color);
-    color: var(--plain-white);
-    border-radius: 4px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin: 1em auto;
+	padding: 0.6em 2em;
+	background-color: var(--main-color);
+	color: var(--plain-white);
+	border-radius: 4px;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin: 1em auto;
 }
 
 main.user-form .sec2 {
-    background: var(--main-color);
-    width: 300px;
-    height: 350px;
-    border: 3px solid #fff;
+	background: var(--main-color);
+	width: 300px;
+	height: 350px;
+	border: 3px solid #fff;
 }
 
 main.user-form #form label {
-    float: left;
-    margin-bottom: 0.2em;
-    text-transform: capitalize;
-    font-weight: 500;
+	float: left;
+	margin-bottom: 0.2em;
+	text-transform: capitalize;
+	font-weight: 500;
 }
 
 .errLog {
-    color: #f13e3e;
-    font-size: 0.8em;
-    text-align: left;
-    float: left;
+	color: #f13e3e;
+	font-size: 0.8em;
+	text-align: left;
+	float: left;
 }
 
 .errLog li {
-    list-style-type: disc;
+	list-style-type: disc;
 }
 
 .errLog li.correct {
-    color: #21bb21;
-    list-style-type: circle;
+	color: #21bb21;
+	list-style-type: circle;
+}
+
+.good {
+	outline-color: #21bb21 !important;
+}
+
+.bad {
+	outline-color: #d60909 !important;
+}
+
+.visible {
+	transition: 0.3s ease-in;
+	display: block;
+	opacity: 100%;
+}
+
+.hidden {
+	display: none;
+	opacity: 0%;
 }
